--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#317EFB">
   <link rel="shortcut icon" href="icons/icon-192x192.png" type="image/x-icon">
-
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="manifest" href="./public/manifest.json">
 
   <title>Budget Tracker</title>
 </head>
@@ -41,7 +41,17 @@
     <canvas id="myChart"></canvas>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <script src="js/index.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script defer src="js/index.js"></script>
+  <script defer src="./public/js/idb.js"></script>
+  <script defer>
+    (function() {
+      if("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("./service-worker.js")
+          .then(() => console.log("Service Worker registered successfully"))
+          .catch(error => console.log("Error registering service worker"));
+      }
+    })();
+  </script>
 </body>
 </html>
